--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Random Color</title>
 </head>
 <body>
+	<p>heleleoeoele</p>
 	<div id="app"></div>
 	<script src="https://content.codecademy.com/courses/React/react-course-bundle.min.js"></script>
 	<script src="/Random.compiled.js"></script>
